--- a/gacha.html
+++ b/gacha.html
@@ -3,9 +3,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>老婆的抽獎機
-      <link rel="icon" href="favicon.png" type="image/png">
-    </title>
+    <title>老婆的抽獎機</title>
+    <link rel="icon" href="/mrdestructoid.ico" type="image/x-icon" />
     <table border="1">
       <tr>
         <td id="td0">學餐的飯</td>
