--- a/gacha.html
+++ b/gacha.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>老婆的抽獎機</title>
-    <link rel="icon" href="/mrdestructoid.ico" type="image/x-icon" />
+    <link rel="icon" href="./mrdestructoid.ico" type="image/x-icon" />
     <table border="1">
       <tr>
         <td id="td0">學餐的飯</td>
