upload little hot pot

--- a/gacha.html
+++ b/gacha.html
@@ -6,7 +6,7 @@
     <title>老婆的抽獎機</title>
     <link rel="icon" href="./mrdestructoid.ico" type="image/x-icon" />
     <table border="1">
-      <p>只有3次機會 請好好把握0.0<br>抽到14 15 16 可以再抽一次0.0</p>
+      <p>只有3次機會 請好好把握0.0<br>抽到15 16 可以再抽一次0.0</p>
       <p>✰早餐請直接問老公✰<br>之後"有可能"會推出</p>
       <tr>
         <td id="td0">學餐的飯</td>
@@ -27,7 +27,7 @@
         <td id="td6">滿大碗</td>
       </tr>
       <tr>
-        <td id="td13">14</td>
+        <td id="td13">little hot pot</td>
         <td id="td7">學餐滷味</td>
       </tr>
       <tr>
@@ -151,7 +151,7 @@
           start.disabled = false;
           tds[num].style.backgroundColor = "#ff1000";
           clicked += 1;
-          if(num == 10 || num == 14 || num == 15 || num == 16) clicked -= 1;
+          if(num == 10 || num == 15 || num == 16) clicked -= 1;
           clearInterval(timeclock);
           start.addEventListener("click", gogoLuck, false);
           return;
