--- a/gacha.html
+++ b/gacha.html
@@ -88,6 +88,9 @@
 -->
   <body>
     <script>
+      var today = new Date();
+      var fastNoodle = false;
+
       function rand(min, max) {
         var num;
         var mix = max - min;
@@ -151,7 +154,8 @@
           start.disabled = false;
           tds[num].style.backgroundColor = "#ff1000";
           clicked += 1;
-          if(num == 10 || num == 15 || num == 16) clicked -= 1;
+          if(num == 9 || num == 14 || num == 15) clicked -= 1;
+          if(fastNoodle && num == 14) clicked -= 1;
           clearInterval(timeclock);
           start.addEventListener("click", gogoLuck, false);
           return;
@@ -165,6 +169,10 @@
       //主要觸發用函式
       function init() {
         console.log("init");
+        if(today.getDay() == 3 || today.getDay() == 0){
+          tds[14].innerText = '泡麵';
+          fastNoodle = true;
+        }
         timeclock = setTimeout(gogoBox, timeGo);
       }
 
