--- a/gacha.html
+++ b/gacha.html
@@ -2,12 +2,12 @@
 
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>老婆的抽獎機</title>
     <link rel="icon" href="./mrdestructoid.ico" type="image/x-icon" />
     <table border="1">
-      <p>只有3次機會 請好好把握0.0<br>抽到15 16 可以再抽一次0.0</p>
-      <p>✰早餐請直接問老公✰<br>之後"有可能"會推出</p>
+      <p>只有3次機會 請好好把握0.0<br />抽到15 16 可以再抽一次0.0</p>
+      <p>✰早餐請直接問老公✰<br />之後"有可能"會推出</p>
       <tr>
         <td id="td0">學餐的飯</td>
         <td id="td1">學餐的麵</td>
@@ -39,7 +39,7 @@
       </tr>
     </table>
     <style>
-      p{
+      p {
         text-align: center;
         color: aqua;
       }
@@ -63,7 +63,7 @@
       }
     </style>
   </head>
-<!--
+  <!--
 
                                                      __----~~~~~~~~~~~------___
                                     .  .   ~~//====......          __--~ ~~
@@ -111,7 +111,7 @@
       }
       //按鈕功能還有防呆和重置歸零
       function gogoLuck() {
-        if(clicked >= 3){
+        if (clicked >= 3) {
           start.disabled = true;
           start.innerText = "不能再抽囉";
           return;
@@ -154,8 +154,8 @@
           start.disabled = false;
           tds[num].style.backgroundColor = "#ff1000";
           clicked += 1;
-          if(num == 9 || num == 14 || num == 15) clicked -= 1;
-          if(fastNoodle && num == 14) clicked -= 1;
+          if (num == 9 || num == 14 || num == 15) clicked -= 1;
+          if (fastNoodle && num == 14) clicked += 1;
           clearInterval(timeclock);
           start.addEventListener("click", gogoLuck, false);
           return;
@@ -169,8 +169,8 @@
       //主要觸發用函式
       function init() {
         console.log("init");
-        if(today.getDay() == 3 || today.getDay() == 0){
-          tds[14].innerText = '泡麵';
+        if (today.getDay() == 3 || today.getDay() == 7) {
+          tds[14].innerText = "泡麵";
           fastNoodle = true;
         }
         timeclock = setTimeout(gogoBox, timeGo);
