--- a/2022_ChiSi/index.html
+++ b/2022_ChiSi/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-  <title>¤C¤i!!</title>
+  <title>Â¤CÂ¤i!!</title>
 </head>
 <body style="margin:0; overflow:hidden">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r120/three.min.js"></script>
@@ -42,7 +42,7 @@ ArToolkitContext.init(function(){
 
 var ArMarkerControls= new THREEx.ArMarkerControls(ArToolkitContext, camera,{
 	type:'pattern',
-  patternUrl:'pattern-IMG_5523_1',
+  patternUrl:'pattern-IMG_5523_1.patt',
   changeMatrixMode:'cameraTransformMatrix'
 });
 scene.visible = false;
