--- a/2022_ChiSi/index.html
+++ b/2022_ChiSi/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-  <title>¤C¤i!!</title>
+  <title>Happy Chinese Valentine' Day!!</title>
 </head>
 <body style="margin:0; overflow:hidden">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r120/three.min.js"></script>
@@ -47,12 +47,10 @@ var ArMarkerControls= new THREEx.ArMarkerControls(ArToolkitContext, camera,{
 });
 scene.visible = false;
 
-const geometry = new THREE.CubeGeometry( 1, 1, 1 );
-const material = new THREE.MeshNormalMaterial( { 
-	transparent: true,
-  opacity: 0.5,
-  side: THREE.DoubleSide
-} );
+const texture = new THREE.TextureLoader().load( 'ChiSi.png' );
+
+const geometry = new THREE.PlaneGeometry(2, 2);	  
+const material = new THREE.MeshBasicMaterial( { map: texture } );
 const cube = new THREE.Mesh( geometry, material );
 cube.position.y = geometry.parameters.height / 2;
 scene.add( cube );
