--- a/2022_ChiSi/index.html
+++ b/2022_ChiSi/index.html
@@ -51,9 +51,10 @@ const texture = new THREE.TextureLoader().load( 'ChiSi.png' );
 
 const geometry = new THREE.PlaneGeometry(1, 1);	  
 const material = new THREE.MeshBasicMaterial( { map: texture } );
-const cube = new THREE.Mesh( geometry, material );
-cube.position.y = geometry.parameters.height / 2;
-scene.add( cube );
+const plane = new THREE.Mesh( geometry, material );
+plane.rotation.x = Math.PI / 2;
+plane.position.y = geometry.parameters.height / 2;
+scene.add( plane );
 
 
 function animate() {
