--- a/2022_ChiSi/index.html
+++ b/2022_ChiSi/index.html
@@ -42,7 +42,7 @@ ArToolkitContext.init(function(){
 
 var ArMarkerControls= new THREEx.ArMarkerControls(ArToolkitContext, camera,{
 	type:'pattern',
-  patternUrl:'pattern-pattern-IMG_5523.patt',
+  patternUrl:'pattern-IMG_5523_1.patt',
   changeMatrixMode:'cameraTransformMatrix'
 });
 scene.visible = false;
