--- a/2022_ChiSi/index.html
+++ b/2022_ChiSi/index.html
@@ -49,10 +49,10 @@ scene.visible = false;
 
 const texture = new THREE.TextureLoader().load( 'ChiSi.png' );
 
-const geometry = new THREE.PlaneGeometry(1, 1);	  
+const geometry = new THREE.PlaneGeometry(2, 2);	  
 const material = new THREE.MeshBasicMaterial( { map: texture } );
 const plane = new THREE.Mesh( geometry, material );
-//plane.rotation.x = Math.PI / 2;
+plane.rotation.x = Math.PI / 4;
 plane.position.y = geometry.parameters.height / 2;
 scene.add( plane );
 
