--- a/gacha.html
+++ b/gacha.html
@@ -33,7 +33,7 @@
       <tr>
         <td id="td12">炒飯</td>
         <td id="td11">海鮮湯麵</td>
-        <td id="td10">九龍城的飯</td>
+        <td id="td10">乾拌粉</td>
         <td id="td9">抱歉 重抽吧</td>
         <td id="td8">咖哩飯</td>
       </tr>
