Add highest score

--- a/snake/index.html
+++ b/snake/index.html
@@ -35,7 +35,7 @@
     <img id="doge" src="./doge_800.png" />
     <canvas id="game" width="800" height="800"></canvas>
     <h3>控制 : 鍵盤 上/下/左/右</h3>
-    <h3 id="score">現在分數 : 0</h3>
+    <h3 id="score">現在分數 : 0          最高分數 : 0 </h3>
 
     <script src="snake.js"></script>
   </body>
