--- a/2022_ChiSi/index.html
+++ b/2022_ChiSi/index.html
@@ -1,70 +1,80 @@
 <!DOCTYPE html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
-  <title>¤C¤i!!</title>
+  <meta charset="utf-8" />
+  <meta
+    name="viewport"
+    content="width=device-width, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no"
+  />
+  <title>Happy Chinese Valentine' Day!!</title>
 </head>
-<body style="margin:0; overflow:hidden">
+<body style="margin: 0; overflow: hidden">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r120/three.min.js"></script>
   <script src="https://threejs.org/examples/js/controls/OrbitControls.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ar.js/2.2.2/aframe-ar.min.js"></script>
 
   <script>
-const scene = new THREE.Scene();
-const camera = new THREE.Camera();
-scene.add(camera);
+    let _iOSDevice = !!navigator.platform.match(/iPhone|iPod|iPad/);
+    console.log("iOS: " + _iOSDevice);
 
-const renderer = new THREE.WebGLRenderer({
-	antialias: true,
-  alpha:true
+    const scene = new THREE.Scene();
+    const camera = new THREE.Camera();
+    scene.add(camera);
 
-});
-renderer.setSize( window.innerWidth, window.innerHeight );
-document.body.appendChild( renderer.domElement );
+    const renderer = new THREE.WebGLRenderer({
+      antialias: true,
+      alpha: true,
+    });
+    renderer.setSize(window.innerWidth, window.innerHeight);
+    document.body.appendChild(renderer.domElement);
 
-var ArToolkitSource = new THREEx.ArToolkitSource({
-	sourceType: "webcam",
-});
-ArToolkitSource.init(function(){
-	setTimeout(function(){
-  	ArToolkitSource.onResizeElement();
-    ArToolkitSource.copyElementSizeTo(renderer.domElement);
-  }, 2000)
-})
+    var ArToolkitSource = new THREEx.ArToolkitSource({
+      sourceType: "webcam",
+    });
+    ArToolkitSource.init(function () {
+      setTimeout(function () {
+        ArToolkitSource.onResizeElement();
+        ArToolkitSource.copyElementSizeTo(renderer.domElement);
+      }, 2000);
+    });
 
-var ArToolkitContext = new THREEx.ArToolkitContext({
-	cameraParametersUrl: 'camera_para.dat',
-	detectionMode: 'color_and_matrix',
-})
-ArToolkitContext.init(function(){
-	camera.projectionMatrix.copy(ArToolkitContext.getProjectionMatrix())
-})
+    var ArToolkitContext = new THREEx.ArToolkitContext({
+      cameraParametersUrl: "camera_para.dat",
+      detectionMode: "color_and_matrix",
+    });
+    ArToolkitContext.init(function () {
+      camera.projectionMatrix.copy(ArToolkitContext.getProjectionMatrix());
+    });
 
-var ArMarkerControls= new THREEx.ArMarkerControls(ArToolkitContext, camera,{
-	type:'pattern',
-  patternUrl:'pattern-IMG_5523_1.patt',
-  changeMatrixMode:'cameraTransformMatrix'
-});
-scene.visible = false;
+    var ArMarkerControls = new THREEx.ArMarkerControls(
+      ArToolkitContext,
+      camera,
+      {
+        type: "pattern",
+        patternUrl: "pattern-IMG_5523_1.patt",
+        changeMatrixMode: "cameraTransformMatrix",
+      }
+    );
+    scene.visible = false;
 
-const geometry = new THREE.CubeGeometry( 1, 1, 1 );
-const material = new THREE.MeshNormalMaterial( { 
-	transparent: true,
-  opacity: 0.5,
-  side: THREE.DoubleSide
-} );
-const cube = new THREE.Mesh( geometry, material );
-cube.position.y = geometry.parameters.height / 2;
-scene.add( cube );
+    const texture = new THREE.TextureLoader().load("ChiSi.png");
 
+    let geometry = new THREE.PlaneGeometry(1, 1);
+    if (_iOSDevice) geometry = new THREE.PlaneGeometry(1, 1);
+    else geometry = new THREE.PlaneGeometry(2, 2);
 
-function animate() {
-  requestAnimationFrame( animate );
-	ArToolkitContext.update(ArToolkitSource.domElement);
-  scene.visible = camera.visible;
-  renderer.render( scene, camera );
-};
+    const material = new THREE.MeshBasicMaterial({ map: texture });
+    const plane = new THREE.Mesh(geometry, material);
+    plane.rotation.x = -Math.PI / 2;
+    plane.position.y = geometry.parameters.height / 2;
+    scene.add(plane);
 
-animate();
+    function animate() {
+      requestAnimationFrame(animate);
+      ArToolkitContext.update(ArToolkitSource.domElement);
+      scene.visible = camera.visible;
+      renderer.render(scene, camera);
+    }
+
+    animate();
   </script>
 </body>
